public/css/project.css
#javascriptDetector {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 55vh;
  z-index: 1000;
  background-color: white;
  text-align: center;
  padding-top: 45vh;
  font-size: 16px;
}

[v-cloak] {
  display: none;
}

html {
  font-size: 15px;
}

body {
  /*height: 100vh;*/
  font-size: 1rem;
  background-color: #000011;
  /*background-image: url("../../Nock-ten_2016-12-25_0210Z.jpg");*/
}


/*
#loading-panel {
  width: 100%;
  height: 1000px;
  min-height: 100%;
}*/

.wait-tabs {
  /*hide until all tabs are initialized*/
  display: none !important;
}

.hide {
  display: none !important;
}

.mdl-layout {
  margin: 0px auto;
  left: 0;
  right: 0;
  height: auto;
}

.mdl-button {
  transition: background 0.25s cubic-bezier(.4, 0, 1, 1), color 0.25s cubic-bezier(.4, 0, 1, 1);
}

.mdl-layout__tab,
.layout-subtitle {
  text-shadow: 0 0 3px black, 1px 0 1px black, 0 1px 1px black, -1px 0 1px black, 0 -1px 1px black;
}

.mdl-layout__drawer {
  width: 320px;
  max-width: 80%;
  -webkit-transform: translateX(-105%);
  transform: translateX(-105%);
}

.mdl-layout__drawer-button>.material-icons {
  line-height: 48px;
  text-shadow: 0 0 10px red, 1px 0 black, 0 1px black, -1px 0 black, 0 -1px black, 1px 1px black, -1px 1px black, -1px -1px black, 1px -1px black;
  transition: all 0.1s cubic-bezier(.4, 0, 1, 1);
}

.mdl-layout__drawer-button>.material-icons:hover {
  font-size: 36px;
  line-height: 48px;
  text-shadow: 0 0 10px red, 0 0 25px red, 1px 0 black, 0 1px black, -1px 0 black, 0 -1px black, 1px 1px black, -1px 1px black, -1px -1px black, 1px -1px black;
  transition: all 0.1s cubic-bezier(.4, 0, 1, 1);
}

#userIcon {
  display: flex;
  flex-direction: column;
  padding-bottom: 32px;
}

.drawer-usericon {
  left: 40px;
  width: 80px;
  position: relative;
  box-sizing: border-box;
}

.drawer-usericon::before {
  content: "";
  display: block;
  padding-top: 100%;
}

.drawer-usericon>img {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
  position: absolute;
  border-radius: 50%;
  border: rgba(0, 0, 0, 0.33) solid 1px;
  background: rgba(0, 0, 0, 0.12) url("../img/ic_perm_identity_white_48px.svg") no-repeat center;
}

.drawer-item {
  display: flex;
  flex-wrap: wrap;
  font-size: 16px;
  min-height: 24px;
  line-height: 24px;
  text-decoration: none;
  padding: 8px 0px 8px 40px;
  color: rgba(66, 66, 66, 0.89);
}

.drawer-username {
  font-size: 20px;
  padding: 12px 0 0 42px;
}

.drawer-email {
  font-size: 16px;
  padding: 6px 0 0 42px;
}

.drawer-getPrivileged {
  margin-top: 24px;
}

.drawer-item>.material-icons {
  font-size: 24px;
  padding-right: 16px;
  vertical-align: middle;
}

@media (max-width: 1024px) {
  .drawer-usericon {
    left: 24px;
  }
  .drawer-item {
    padding: 5px 0 10px 24px;
  }
  .drawer-username {
    padding: 8px 0 0 26px;
  }
  .drawer-email {
    padding: 6px 0 0 26px;
  }
  footer {
    margin-top: 8px;
  }
}

@media (min-width: 1024px) {
  .mdl-layout {
    max-width: 1024px;
    /*min-width: 600px;*/
  }
  .mdl-layout__drawer-button {
    left: 0;
    top: 0;
    margin: 9px 0px !important;
    background-color: transparent !important;
  }
  .header-vspacer {
    height: 20px;
  }
}

@media (max-width: 1023px) {
  .header-vspacer {
    height: 12px;
  }
  .mdl-layout__drawer-button {
    top: 0;
    left: 0;
    margin: 0px !important;
    background-color: transparent !important;
  }
}

.mdl-layout__header {
  background-color: #222233;
  background-image: url("../img/header-sea.jpg");
}

.mdl-layout__header-row {
  display: block;
  white-space: nowrap;
  padding-left: 48px;
}

#logo {
  text-decoration: none;
  color: #ef8000;
  font-weight: 900;
  font-size: 24px;
  text-shadow: 2px 1px black, 1px 0 black, 0 1px black, -1px 0 black, 0 -1px black, 1px 1px black, -1px 1px black, -1px -1px black, 1px -1px black;
}


/*
#logo:hover {
  text-decoration: underline;
  color: #ef8000;
  font-weight: 900;
  font-size: 24px;
  text-shadow: 2px 1px #000000;
}*/

.mdl-layout__tab-bar {
  /*height: 48px;*/
  height: 72px;
  width: calc(100% - 72px);
  padding-left: 36px;
  padding-right: 36px;
  /*overflow: hidden;*/
  background-color: transparent;
}

.mdl-layout__tab {
  padding: 0px 16px;
}

.mdl-layout__tab.two-line {
  line-height: 16px;
  padding-top: 6px;
  height: 42px;
}

.mdl-layout__tab-bar-button {
  width: 36px;
  background-color: transparent;
}

.mdl-layout__tab-bar-button.is-active {
  color: #ff8820;
  background-color: rgba(255, 255, 255, 0.24);
}

.mdl-layout__tab-panel {
  min-height: calc(100vh - 112px - 138px);
}

.mdl-layout__content {
  background-color: rgba(255, 255, 255, 0.97);
}

.page-content {
  padding: 0px;
  color: rgba(0, 0, 0, 0.75);
}

.goPost {
  position: absolute;
  text-align: right;
  height: 48px;
  top: 0;
  right: 0;
}

.goPost>a {
  font-size: 24px;
  text-decoration: none;
}

.goPost .material-icons {
  text-align: center;
  line-height: 48px;
  font-size: 36px;
  width: 48px;
}

.intro {
  font-size: 36px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 360px;
  line-height: 1.2;
  color: rgba(250, 250, 250, 0.89);
}

.post-container {
  min-height: 360px;
}

#home {
  background: radial-gradient(circle farthest-corner at 16% 40%, #24ddd3, #012de3);
}

#newsPosts .goPost * {
  color: rgba(0, 0, 0, 0.5);
}

#newsPosts {
  position: relative;
  padding: 12px;
  background-color: rgba(255, 255, 255, 0.66);
  min-height: 456px;
}

#newsPosts .title {
  padding: 6px;
  margin: 0;
}

#newsPosts .message {
  width: 100%;
  min-height: 360px;
  line-height: 300px;
  text-align: center;
  font-size: 32px;
  color: rgba(0, 0, 0, 0.5);
}

.mdl-mini-footer__right-section {
  margin-left: auto;
  margin-right: 0;
}

.t-bottom::before {
  content: "";
  height: 100%;
  display: inline-block;
  vertical-align: bottom;
}

.mdl-logo {
  margin-bottom: 0;
}

#dim {
  display: none;
  z-index: 200;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.75);
  position: fixed;
  top: 0;
  left: 0;
  text-align: center;
}

.dialogContainers {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateY(-50%) translateX(-50%) translateZ(0);
  background-color: white;
  text-align: center;
  border-radius: 3px;
}

.inactive {
  display: none;
}

#loginIntro {
  width: 320px;
  height: 270px;
}

#loginIntro>.mdl-card__title {
  color: white;
  background-image: url("../img/intro.jpg");
  background-size: cover;
}

.mdl-card__menu {
  top: 0;
  right: 0;
  cursor: pointer;
}

.mdl-card__menu>a {
  color: rgba(0, 0, 0, 0.36);
}

.font.B {
  font-weight: bold;
}

#loginIntro,
#loginDialog,
#signupDialog,
#signupConfirm,
#verifyEmailSent {
  transform: perspective(1px);
}

#loginDialog {
  min-height: 280px;
}

#signupDialog {
  min-height: 414px;
}

#confirmDimer {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
}

#signupConfirm {
  min-height: 236px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateY(-50%) translateX(-50%);
  border-radius: 3px;
}

#loginLoading,
#signupLoading {
  position: absolute;
  width: 100%;
  height: 100%;
  background: rgba(255, 255, 255, 0.6);
  text-align: center;
}

.goPost::before,
#dim::before,
#loginLoading::before,
#signupLoading::before {
  content: "";
  display: inline-block;
  height: 100%;
  line-height: 100%;
  vertical-align: middle;
}


/*#loginLoading>.mdl-spinner,
#signupLoading>*/

.mdl-spinner {
  display: inline-block;
}

.mdl-card__supporting-text {
  width: auto;
  text-align: left;
}

#verifyEmailSent {
  min-height: 330px;
}

#verifyEmailSent strong {
  color: rgba(255, 0, 0, 0.89);
}

#verifyEmailSent__CB {
  margin: 0 auto 16px;
}

.mdl-snackbar {
  opacity: 0;
  transition: opacity 0.1s linear, transform .25s cubic-bezier(.4, 0, 1, 1);
}

.mdl-snackbar.mdl-snackbar--active {
  opacity: 1;
  transition: opacity 0.1s linear, transform .25s cubic-bezier(0, 0, .2, 1);
}

#userInfoEditor {
  width: auto;
  max-width: 640px;
  min-height: 400px;
}

.mdl-text_wide {
  display: flex;
  width: auto;
}

#operShow {
  margin: 16px;
  display: flex;
  flex-wrap: wrap;
}

#operShow .prod-type {
  display: inline-flex;
  flex: 2 1 300px;
}

#operShow .date-time {
  display: inline-flex;
  flex: 1 20000 150px;
}

#operShow .img-container {
  height: 100%;
  flex: 0 0 100%;
  text-align: center;
}

#operShow .img-container::before {
  content: "";
  line-height: 100%;
  vertical-align: middle;
}

#operShow .img-container img {
  max-width: 100%;
}

